# not a GNU package. You can remove this line, if
# have all needed files, that a GNU package needs
AUTOMAKE_OPTIONS = foreign 1.4

SUBDIRS = po include lib vuurmuur vuurmuur_log vuurmuur_script vuurmuur_conf scripts services config man debian help doc

ACLOCAL_AMFLAGS = -I m4

EXTRA_DIST = config.rpath installer
