# not a GNU package. You can remove this line, if
# have all needed files, that a GNU package needs
AUTOMAKE_OPTIONS = foreign 1.4

SUBDIRS = vuurmuur vuurmuur_log vuurmuur_script scripts services config man

#EXTRA_DIST = vuurmuur.8 vuurmuur_log.8 vuurmuur_script.8

#man_MANS = vuurmuur.8 vuurmuur_log.8 vuurmuur_script.8
