AC_INIT(configure.in)

AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(vuurmuur, 0.6)

AC_LANG_C
AC_PROG_CC
AM_PROG_LIBTOOL

AC_ARG_ENABLE(binreloc,
        [  --enable-binreloc        enable binreloc support (for autopackage)],
            CFLAGS="$CFLAGS -DBINRELOC_ENABLED"
        ,)

AC_ARG_WITH(libvuurmuur_includes,
	[  --with-libvuurmuur-includes=DIR  libvuurmuur includes directory],
	[with_libvuurmuur_includes="$withval"],[with_libvuurmuur_includes=no])

AC_ARG_WITH(libvuurmuur_libraries,
       [  --with-libvuurmuur-libraries=DIR  libvuurmuur library directory],
       [with_libvuurmuur_libraries="$withval"],[with_libvuurmuur_libraries=no])

if test "$with_libvuurmuur_includes" != "no"; then
   CPPFLAGS="${CPPFLAGS} -I${with_libvuurmuur_includes}"
fi

if test "$with_libvuurmuur_libraries" != "no"; then
   LDFLAGS="${LDFLAGS}  -L${with_libvuurmuur_libraries}"
fi

LVUUR=""
AC_CHECK_HEADERS(vuurmuur.h,, LVUUR="no")
if test "$LVUUR" = "no"; then
	echo
	echo "   ERROR!  vuurmuur.h header not found, go get it from"
	echo "   http://vuurmuur.sourceforge.net/"
	exit
fi

LVUUR=""
AC_CHECK_LIB(vuurmuur,tell_libvuurmuur_version,, LVUUR="no")
if test "$LVUUR" = "no"; then
	echo
	echo "   ERROR!  libvuurmuur library not found, go get it from"
	echo "   http://vuurmuur.sourceforge.net/"
	exit
fi

AC_OUTPUT(Makefile vuurmuur/Makefile vuurmuur_log/Makefile
	    vuurmuur_script/Makefile scripts/Makefile services/Makefile
	    config/Makefile man/Makefile man/en/Makefile man/ru/Makefile)
