AC_INIT(configure.in)

AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(libvuurmuur,0.8rc1)
AC_CONFIG_MACRO_DIR([m4])

AC_LANG_C
AC_PROG_CC
AM_PROG_LIBTOOL

AC_ARG_WITH(plugindir,
        [  --with-plugindir=DIR    plugins directory (default $libdir/vuurmuur)],
        [plugindir="$withval"],[plugindir=no])

if test "$plugindir" != "no"; then
    VUURMUUR_PLUGIN_DIR="${plugindir}"
else
    VUURMUUR_PLUGIN_DIR="${libdir}/vuurmuur/plugins"
fi
CPPFLAGS="${CPPFLAGS} -DPLUGINDIR=\"$VUURMUUR_PLUGIN_DIR\""
AC_SUBST(VUURMUUR_PLUGIN_DIR)

ac_build_ipv6=yes
AC_ARG_ENABLE([ipv6],
        [AS_HELP_STRING([--disable-ipv6],[disable IPv6 support])],
        [ if test "x$enableval" = "xno"; then
            ac_build_ipv6=$enableval
          fi
        ], [
            ac_build_ipv6=yes
        ] )

if test "x${ac_build_ipv6}" = "xyes"; then
    AC_DEFINE(IPV6_ENABLED, 1, [build with IPv6 support])
fi

# shared dir option for rpm building
AC_ARG_WITH(shareddir,
       [  --with-shareddir=DIR  vuurmuur shared dir (default $datadir/vuurmuur)],
       [shareddir="$withval"],[shareddir=no])

if test "$shareddir" != "no"; then
   CPPFLAGS="${CPPFLAGS} -DDATADIR=\"${shareddir}\""
else
   CPPFLAGS="${CPPFLAGS} -DDATADIR=\"${datadir}/vuurmuur\""
fi

AC_OUTPUT(Makefile src/Makefile src/textdir/Makefile doc/Makefile debian/Makefile)
