AC_INIT(configure.in)

AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(vuurmuur_conf,0.8rc1)
AC_CONFIG_MACRO_DIR([m4])

AC_USE_SYSTEM_EXTENSIONS

AC_LANG_C
AC_PROG_CC
AM_PROG_LIBTOOL

AM_GNU_GETTEXT([external])
AM_GNU_GETTEXT_VERSION

AC_ARG_WITH(libvuurmuur_includes,
	[  --with-libvuurmuur-includes=DIR  libvuurmuur includes directory],
	[with_libvuurmuur_includes="$withval"],[with_libvuurmuur_includes=no])

AC_ARG_WITH(libvuurmuur_libraries,
       [  --with-libvuurmuur-libraries=DIR  libvuurmuur library directory],
       [with_libvuurmuur_libraries="$withval"],[with_libvuurmuur_libraries=no])

if test "$with_libvuurmuur_includes" != "no"; then
   CPPFLAGS="${CPPFLAGS} -I${with_libvuurmuur_includes}"
fi

if test "$with_libvuurmuur_libraries" != "no"; then
   LDFLAGS="${LDFLAGS}  -L${with_libvuurmuur_libraries}"
fi

# locale dir option for rpm building
# switch to VRMR_LOCALEDIR because LOCALEDIR conflicts with intl/ in
# make distcheck
AC_ARG_WITH(tmplocaledir,
       [  --with-localedir=DIR  vuurmuur locale dir (default $prefix/locale)],
       [tmplocaledir="$withval"],[tmplocaledir=no])

if test "$tmplocaledir" != "no"; then
    CPPFLAGS="${CPPFLAGS} -DVRMR_LOCALEDIR=\"${tmplocaledir}\""
else
    CPPFLAGS="${CPPFLAGS} -DVRMR_LOCALEDIR=\"${datadir}/locale\""
fi

ac_build_ipv6=yes
AC_ARG_ENABLE([ipv6],
        [AS_HELP_STRING([--disable-ipv6],[disable IPv6 support])],
        [ if test "x$enableval" = "xno"; then
            ac_build_ipv6=$enableval
          fi
        ], [
            ac_build_ipv6=yes
        ] )

if test "x${ac_build_ipv6}" = "xyes"; then
    AC_DEFINE(IPV6_ENABLED, 1, [build with IPv6 support])
fi

LVUUR=""
AC_CHECK_HEADERS(vuurmuur.h,, LVUUR="no")
if test "$LVUUR" = "no"; then
	echo
	echo "   ERROR!  vuurmuur.h header not found, go get it from"
	echo "   http://www.vuurmuur.org/"
	exit
fi

LVUUR=""
AC_CHECK_LIB(vuurmuur,libvuurmuur_get_version,, LVUUR="no")
if test "$LVUUR" = "no"; then
	echo
	echo "   ERROR!  libvuurmuur library not found, go get it from"
	echo "   http://www.vuurmuur.org/"
	exit
fi

AC_ARG_WITH(ncurses_includes,
	[  --with-libncurses-includes=DIR  libncurses includes directory],
	[with_libncurses_includes="$withval"],[with_libncurses_includes=no])

AC_ARG_WITH(ncurses_libraries,
	[  --with-libncurses-libraries=DIR  libncurses library directory],
	[with_libncurses_libraries="$withval"],[with_libncurses_libraries=no])

if test "$with_libncurses_includes" != "no"; then
	CPPFLAGS="${CPPFLAGS} -I${with_libncurses_includes}"
fi

if test "$with_libncurses_libraries" != "no"; then
	LDFLAGS="${LDFLAGS}  -L${with_libncurses_libraries}"
fi

AC_ARG_WITH(widec,
	[  --with-widec=yes|no|auto(default)  compile with widecharacter support (ncursesw)],
	[widec="$withval"],[widec=auto])

if test "$widec" = "auto"; then
	LCURS=""
	WCURS=""
	AC_CHECK_HEADERS(ncurses.h,, LCURS="no")
	AC_CHECK_HEADERS(ncursesw/ncurses.h,, WCURS="no")
	if test "$LCURS" = "no" && test "$WCURS" = "no"; then
		echo
		echo "   ERROR!  ncurses.h header not found!"
		echo "   Please install the development package of Ncurses."
		exit
	fi
	if test "$WCURS" != "no"; then
		CPPFLAGS="${CPPFLAGS} -DHAVE_NC_WIDE_HEADERS"
	fi

	LCURS=""
	WCURS=""
	AC_CHECK_HEADERS(panel.h,, LCURS="no")
	AC_CHECK_HEADERS(ncursesw/panel.h,, WCURS="no")
	if test "$LCURS" = "no" && test "$WCURS" = "no"; then
		echo
		echo "   ERROR!  panel.h header not found!"
		echo "   Please install the development package of Ncurses."
		exit
	fi

	LCURS=""
	WCURS=""
	AC_CHECK_HEADERS(menu.h,, LCURS="no")
	AC_CHECK_HEADERS(ncursesw/menu.h,, WCURS="no")
	if test "$LCURS" = "no" && test "$WCURS" = "no"; then
		echo
		echo "   ERROR!  menu.h header not found!"
		echo "   Please install the development package of Ncurses."
		exit
	fi

	NCURS=""
	NCURSW=""
	AC_CHECK_LIB(ncursesw,initscr,, NCURSW="no")
	if test "$NCURSW" = "no"; then
		AC_CHECK_LIB(ncurses,initscr,, NCURS="no")
		if test "$NCURS" = "no" && test "$NCURSW" = "no"; then
			echo
			echo "   ERROR!  Ncurses library not found!"
	        	exit
		fi
	else
		CPPFLAGS="${CPPFLAGS} -DUSE_WIDEC"
	fi

	NCURS=""
	NCURSW=""
	AC_CHECK_LIB(menuw,new_menu,, NCURSW="no")
	if test "$NCURSW" = "no"; then
		AC_CHECK_LIB(menu,new_menu,, NCURS="no")
		if test "$NCURS" = "no"; then
			echo
			echo "   ERROR!  Ncurses/menu library not found!"
			exit
		fi
	fi

	NCURS=""
	NCURSW=""
	AC_CHECK_LIB(formw,new_form,, NCURSW="no")
	if test "$NCURSW" = "no"; then
		AC_CHECK_LIB(form,new_form,, NCURS="no")
		if test "$NCURS" = "no"; then
			echo
			echo "   ERROR!  Ncurses/form library not found!"
			exit
		fi
	fi

	NCURS=""
	NCURSW=""
	AC_CHECK_LIB(panelw,new_panel,, NCURSW="no")
	if test "$NCURSW" = "no"; then
		AC_CHECK_LIB(panel,new_panel,, NCURS="no")
		if test "$NCURS" = "no"; then
			echo
			echo "   ERROR!  Ncurses/panel library not found!"
			exit
		fi
	fi
elif test "$widec" = "yes"; then
	# check for normal ncurses headers as well, because some
	# distros seem to have placed the wide headers in
	# the path of the normal ones (suse 9.3)
	
	CPPFLAGS="${CPPFLAGS} -DUSE_WIDEC"

	LCURS=""
	WCURS=""
	AC_CHECK_HEADERS(ncursesw/ncurses.h,, WCURS="no")
	if test "$LCURS" = "no" && test "$WCURS" = "no"; then
		echo
		echo "   ERROR!  ncurses.h header not found!"
		echo "   Please install the development package of Ncurses."
		exit
	fi
	if test "$WCURS" != "no"; then
		CPPFLAGS="${CPPFLAGS} -DHAVE_NC_WIDE_HEADERS"
	fi

	LCURS=""
	WCURS=""
	AC_CHECK_HEADERS(panel.h,, LCURS="no")
	AC_CHECK_HEADERS(ncursesw/panel.h,, WCURS="no")
	if test "$LCURS" = "no" && test "$WCURS" = "no"; then
		echo
		echo "   ERROR!  panel.h header not found!"
		echo "   Please install the development package of Ncurses."
		exit
	fi

	LCURS=""
	WCURS=""
	AC_CHECK_HEADERS(menu.h,, LCURS="no")
	AC_CHECK_HEADERS(ncursesw/menu.h,, WCURS="no")
	if test "$LCURS" = "no" && test "$WCURS" = "no"; then
		echo
		echo "   ERROR!  menu.h header not found!"
		echo "   Please install the development package of Ncurses."
		exit
	fi

	NCURSW=""
	AC_CHECK_LIB(ncursesw,initscr,, NCURSW="no")
	if test "$NCURSW" = "no"; then
		echo
		echo "   ERROR!  Ncursesw library not found!"
        	exit
	fi

	NCURSW=""
	AC_CHECK_LIB(menuw,new_menu,, NCURSW="no")
	if test "$NCURSW" = "no"; then
		echo
		echo "   ERROR!  Ncursesw/menuw library not found!"
		exit
	fi

	NCURSW=""
	AC_CHECK_LIB(formw,new_form,, NCURSW="no")
	if test "$NCURSW" = "no"; then
		echo
		echo "   ERROR!  Ncursesw/formw library not found!"
		exit
	fi

	NCURSW=""
	AC_CHECK_LIB(panelw,new_panel,, NCURSW="no")
	if test "$NCURSW" = "no"; then
		echo
		echo "   ERROR!  Ncursesw/panelw library not found!"
		exit
	fi
else
	# No ncursesw. Just check for normal ncurses
	#
	#
	
	LCURS=""
	AC_CHECK_HEADERS(ncurses.h,, LCURS="no")
	if test "$LCURS" = "no"; then
		echo
		echo "   ERROR!  ncurses.h header not found!"
		echo "   Please install the development package of Ncurses."
		exit
	fi

	LCURS=""
	AC_CHECK_HEADERS(panel.h,, LCURS="no")
	if test "$LCURS" = "no"; then
		echo
		echo "   ERROR!  panel.h header not found!"
		echo "   Please install the development package of Ncurses."
		exit
	fi

	LCURS=""
	AC_CHECK_HEADERS(menu.h,, LCURS="no")
	if test "$LCURS" = "no"; then
		echo
		echo "   ERROR!  menu.h header not found!"
		echo "   Please install the development package of Ncurses."
		exit
	fi

	NCURS=""
	AC_CHECK_LIB(ncurses,initscr,, NCURS="no")
	if test "$NCURS" = "no"; then
		echo
		echo "   ERROR!  Ncurses library not found!"
        	exit
	fi

	NCURS=""
	AC_CHECK_LIB(menu,new_menu,, NCURS="no")
	if test "$NCURS" = "no"; then
		echo
		echo "   ERROR!  Ncurses/menu library not found!"
		exit
	fi

	NCURS=""
	AC_CHECK_LIB(form,new_form,, NCURS="no")
	if test "$NCURS" = "no"; then
		echo
		echo "   ERROR!  Ncurses/form library not found!"
		exit
	fi

	NCURS=""
	AC_CHECK_LIB(panel,new_panel,, NCURS="no")
	if test "$NCURS" = "no"; then
		echo
		echo "   ERROR!  Ncurses/panel library not found!"
		exit
	fi
fi

AC_OUTPUT(Makefile src/Makefile po/Makefile.in help/Makefile scripts/Makefile config/Makefile man/Makefile man/en/Makefile man/ru/Makefile debian/Makefile)

