METASOURCES = AUTO
bin_PROGRAMS = vuurmuur_script

vuurmuur_script_SOURCES = vuurmuur_script.c vuurmuur_script.h script_print.c \
			script_list.c scripts_add.c script_delete.c script_modify.c script_rename.c \
			backendcheck.c script_apply.c script_unblock.c script_dev.c
vuurmuur_script_LDADD = $(LIBVUURMUUR_LDADD)
noinst_HEADERS = backendcheck.h
