METASOURCES = AUTO
bin_PROGRAMS = vuurmuur_script

vuurmuur_script_SOURCES = \
backendcheck.c \
script_add.c \
script_apply.c \
script_delete.c \
script_dev.c \
script_list.c \
script_modify.c \
script_print.c \
script_rename.c \
script_unblock.c \
vuurmuur_script.c vuurmuur_script.h

vuurmuur_script_LDADD = $(LIBVUURMUUR_LDADD)
noinst_HEADERS = backendcheck.h
