INCLUDES = 
METASOURCES = AUTO
noinst_DOCS = INSTALL
docsdir = "$(datadir)/doc/vuurmuur"
docs_DATA = INSTALL.DEBIAN \
	INSTALL.MANDRAKE \
	INSTALL.SUSE \
	INSTALL.SLACKWARE \
	README INSTALL
docsrudir = "$(datadir)/doc/vuurmuur/ru"
docsru_DATA = INSTALL-RU \
	INSTALL-RU.DEBIAN \
	INSTALL-RU.MANDRAKE \
	INSTALL-RU.SUSE \
	README-RU
