INCLUDES = 
METASOURCES = AUTO

servicesdir = "$(datadir)/vuurmuur/services"

noinst_SERVICES = *
services_DATA = cvs dns ftp http https ident imap imaps irc jabber ldap lisa msn\
	mysql news ntp pcanywhere ping pop3 pop3s pptp razor rdp rsync samba\
	smtp socks squid-proxy ssh syslog telnet traceroute upnp usermin vnc\
	webmin whois windowsmedia

