INCLUDES = 
METASOURCES = AUTO
noinst_SCRIPTS = vuurmuur-config-setup.sh vuurmuur-initd.sh vuurmuur-initd.sh.suse vuurmuur-logrotate rc.vuurmuur
scriptsdir = "$(datadir)/vuurmuur/scripts"
scripts_DATA = vuurmuur-config-setup.sh vuurmuur-initd.sh vuurmuur-initd.sh.suse vuurmuur-logrotate rc.vuurmuur
EXTRA_DIST = $(scripts_DATA)
