servicesdir = $(datadir)/vuurmuur/services
services_DATA = aim cvs dns ftp http https icq ident imap imaps irc jabber\
	ldap lisa msn\
	mysql news nfs ntp pcanywhere ping pop3 pop3s pptp razor rdp rsync samba\
	smtp socks squid-proxy ssh syslog telnet tinc traceroute upnp usermin vnc\
	webmin whois windowsmedia yahoo
EXTRA_DIST = $(services_DATA)

