servicesdir = $(datadir)/vuurmuur/services
services_DATA = aim boxbackup check_mk-agent cups cvs dhcp dns ftp git gopher\
	http http-proxy https icq ident imap imaps ipsec ipv6 irc jabber keyserver\
	ldap lisa msn mysql nagios news nfs ntp pcanywhere ping pop3 pop3s\
	portmapper pptp racadm razor rdp rsync rtsp samba shoutcast sip sixxs smtp\
	snmp snmp-trap socks squid-proxy ssh submission svn syslog telnet tftp tinc\
	traceroute upnp usermin vmware_net vnc webmin whois windowsmedia yahoo
EXTRA_DIST = $(services_DATA)

